# thing-control-panel

./: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SUMMARY.md  dev.skaffold.yaml  package-lock.json  package.json  skaffold.dev.yaml  skaffold.env.example  skaffold.yaml
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml
backend/: .bandit-baseline.json  .gitlab-ci.yml  Dockerfile  pyproject.toml
backend/backend/: main.py
backend/db-migration/: .bandit-baseline.json  Dockerfile  alembic.ini  pyproject.toml
backend/db-migration/src/: env.py  script.py.mako
backend/src/: Dockerfile  main.py  pyproject.toml
backend/src/backend/repositories/models/: __init__.py
ci-cd/: dev.job-runner.Dockerfile  ops.job-runner.Dockerfile
deployment/: .gitlab-ci.yml
deployment/ci-cd/: dev.job-runner.Dockerfile  ops.job-runner.Dockerfile
deployment/helm/backend/: Chart.yaml  values.yaml
deployment/helm/backend-db-migration/: Chart.yaml  values.yaml
deployment/helm/backend-db-migration/templates/: _helpers.tpl  job.yaml
deployment/helm/cert-issuer/: README.md  values.yaml
deployment/helm/cert-issuer/templates/: _helpers.tpl  cert-issuer.yaml
deployment/helm/documentation/: Chart.yaml  values.yaml
deployment/helm/frontend/: README.md
deployment/helm/gateway/: Chart.yaml  values.yaml
deployment/helm/gateway/templates/: _helpers.tpl  gateway.yaml  gatewayclass.yaml  routes.yaml
deployment/helm/ingress/: Chart.yaml  README.md
deployment/helm/postgres/: Chart.yaml  values.yaml
deployment/helm/postgres/templates/: deployment.yaml  secret.yaml  service.yaml
deployment/helm/zitadel/: Chart.yaml  values-override.yaml
deployment/helm/zitadel-ops/: Chart.yaml  values.yaml
deployment/helm/zitadel-ops/templates/: _helpers.tpl  export.yaml  import.yaml
deployment/helm/zitadel/templates/: masterkey.yaml
documentation/: Dockerfile  mkdocs.yml  pyproject.toml
documentation/docs/: index.md
documentation/docs/self-hosting/: introduction.md
documentation/docs/stylesheets/: extra.css
documentation/overrides/: sitemap.xml
documentation/self-hosting/: introduction.md
frontend/: .gitignore  .gitlab-ci.yml  .prettierrc  Dockerfile  README.md  app.config.ts  package-lock.json  vite.config.ts
frontend/public/: humans.txt
frontend/src/: App.tsx  overall-theme.tsx
frontend/src/builtins/: app-settings.tsx  hooks.tsx  reuse-components.tsx  sidebar.tsx  utils.tsx
frontend/src/builtins/client/: action-client.tsx  doc-viewer.tsx  events-client.tsx  index.tsx  input-components.tsx  locator.tsx  output-components.tsx  property-client.tsx  state.tsx
frontend/src/builtins/log-viewer/: log-viewer.tsx  styles.css
src/: App.tsx
src/__tests__/: utils.test.ts
src/builtins/: app-settings.tsx  hooks.tsx  reuse-components.tsx  sidebar.tsx  utils.tsx
src/builtins/client/: action-client.tsx  app-settings.tsx  doc-viewer.tsx  events-client.tsx  index.tsx  input-components.tsx  locator.tsx  output-components.tsx  property-client.tsx  state.tsx  view.tsx
src/builtins/drag-and-drop/: index.tsx
tests/unit/: utils.test.ts
