[project]
name = "thing-control-panel"
version = "0.1.0"
authors = [
    {name = "Vignesh Vaidyanathan", email = "info@hololinked.dev"},
]
description = "Rest API backend for Thing Control Panel"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["licenses/*", "license.txt"]
dependencies = [
    "msgspec>=0.18.6",
    "pydantic>=2.8.0,<3.0.0",
    "jsonschema>=4.22.0,<5.0",
    "structlog>=25.5.0",
    "argon2-cffi>=23.1.0",
    "sqlalchemy>2.0.21",
    "sqlalchemy-utils>=0.41",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pip>=25.2",
    "ruff>=0.12.10",
    "pre-commit>=4.5.0",
    "debugpy>=1.8.19",
]
test = [
    "requests==2.32.3",
    "faker==37.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-order>=1.0.0",
    "pytest-asyncio>=1.3.0",
]
scanning = [
    "bandit>=1.9.1",
]   

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --ignore=lib64"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "order: mark test to run in a specific order",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: mark test as asyncio to run with pytest-asyncio"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning"
]

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache", 
    "__pycache__"   
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.bandit]
exclude_dirs = [
    ".venv",
    ".ruff_cache", 
    "__pycache__", 
    ".vscode", 
    ".github", 
    "doc",
    "examples", 
    "licenses",
    "tests"
]

