[project]
name = "thing-control-panel-documentation"
version = "0.1.0"
authors = [
    {name = "Vignesh Vaidyanathan", email = "info@hololinked.dev"},
]
description = "Documentation in mkdocs material for Thing Control Panel"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["licenses/*", "license.txt"]
dependencies = [
    "mkdocs-material==9.7.1",
    "mkdocs-autorefs==1.4.2",
    "mkdocs-git-authors-plugin==0.9.5",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-macros-plugin==1.3.7",
    "mkdocstrings[python]==0.29.1",
    "pydantic==2.11.5",
]

[dependency-groups]
dev = [
    "pip>=25.2",
    "ruff>=0.12.10",
    "pre-commit>=4.5.0",
    "debugpy>=1.8.19",
]

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache", 
    "__pycache__"   
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
