[project]
name = "backend-db-migrations"
version = "0.1.0"
authors = [
    {name = "Vignesh Vaidyanathan", email = "info@hololinked.dev"},
]
description = "migrates database to latest versions"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["licenses/*", "license.txt"]
dependencies = [
    "alembic==1.18.3",
    "sqlalchemy==2.0.46",
    "sqlalchemy-utils==0.42.1",
    "backend"
]

[tool.uv.sources]
backend = { path = "../src" }

[dependency-groups]
dev = [
    "pip>=25.2",
    "ruff>=0.12.10",
    "pre-commit>=4.5.0",
    "debugpy>=1.8.19",
]
scanning = [
    "bandit>=1.9.1",
]   

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache", 
    "__pycache__"   
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.bandit]
exclude_dirs = [
    ".venv",
    ".ruff_cache", 
    "__pycache__", 
    ".vscode", 
    ".github", 
    "doc",
    "examples", 
    "licenses",
    "tests"
]

